Calculate sequence logic change